--- a/rogherdy-h/app/build.gradle
+++ b/rogherdy-h/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "21.1.2"
 
     defaultConfig {
-        applicationId "com.ok88.andydev.uniwe_f"
+        applicationId "com.ok88.andydev.rogherdy_h"
         minSdkVersion 16
         targetSdkVersion 21
         versionCode 1
