--- a/rogherdy-h/app/src/main/AndroidManifest.xml
+++ b/rogherdy-h/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.ok88.andydev.uniwe_f" >
+    package="com.ok88.andydev.rogherdy_h" >
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
