--- a/rogherdy-h/app/build.gradle
+++ b/rogherdy-h/app/build.gradle
@@ -25,5 +25,5 @@ android {
 }
 
 dependencies {
-    compile 'com.android.support:appcompat-v7:19.1.+'
+    compile 'com.android.support:appcompat-v7:22.1.1'
 }
